@@ -1,3 +1,9 @@
+20080613
+ - (dtucker) OpenBSD CVS Sync
+   - deraadt@cvs.openbsd.org 2008/06/13 09:44:36
+     [packet.c]
+     compile on older gcc; no decl after code
+
 20080612
  - (dtucker) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2008/06/11 07:30:37
@@ -4335,4 +4341,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5003 2008/06/13 05:03:14 dtucker Exp $
+$Id: ChangeLog,v 1.5004 2008/06/13 12:02:50 dtucker Exp $
